@@ -435,3 +435,5 @@
 - Changed some non-error messages in newconf from config_status to config_progress
 - Added a way for newconf to report its errors in windows using a "Config Error" dialog
 - Fixed the /stats Z bug reported by RaYmAn
+- Added missing resource.h defineand missing +1 in MyMalloc of win_log reported by McSkaf
+  Seemed to work without the +1 but added it just to be safe.
